# noveltl

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  compose.debug.yaml  compose.local.yaml  compose.prod.yaml  compose.yaml  conventions.md  opencode.json  pyproject.toml  readme.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  openapi.json  openapi.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01744484f72f_modified_novels_db_model_to_include_.py  06741dac5042_initial.py  0af69e401fcc_defined_models.py  0d25aa6217fe_made_some_thing_non_nullable.py  165c7fd80ea7_add_novel_associations_table.py  16e5b3ec4509_migrate_label_data_id_to_uuid.py  1fbdd31e9fe5_removed_translations_service.py  249e19cd905e_migrate_user_id_to_uuid.py  311bff881c2e_changed_labeldata_now_points_to_.py  3d153d0ed511_rename_tables.py  416fb845959c_some_typing_issues_in_some_of_the_.py  48dea3009a6f_migrate_label_group_id_to_uuid.py  494134820c05_typo.py  4df7e746c509_migrate_revision_id_to_uuid.py  5619f067b676_migrate_chapter_id_to_uuid.py  5a285fac79b0_passive_deletes_true_this_is_such_a_.py  60f4c7ce17aa_initial.py  72ff918c4e2f_add_glossary_tables.py  7c5b2746086a_enforce_language_code_length.py  7d1863f93374_initial.py  8217e7002da0_updated_raw_chapter_revision_to_.py  8750555125c6_updated_label_models_to_flattened_list_.py  8e4c0b9d408f_migrate_label_id_to_uuid.py  a0e19c1d8bd0_update_novel_chapter_models.py  a1b2c3d4e5f6_add_performance_indexes.py  a5d20765c07d_apparently_i_forgot_to_do_this.py  ab15b9c01e82_add_translation_tables.py  b5c2299f7d1c_modified_labels_db_models.py  c0ef1ad0c0c8_add_check_constraint_for_raw_chapter_.py  c97bd65993aa_migrate_novel_id_to_uuid.py  db55c8b8273b_migrated_user_user_type_to_enum_class_.py  dd70ca7f7dcd_resolve_issue_with_enum_using_values_.py  e36f5285fe7c_add_server_default_for_chapter_id.py  e4537d18d35c_cache_ok_true_for_enumasinteger.py  e6b5ee9d4018_switch_entity_group_to_non_null.py  e8ee48d8ed23_add_cascade_delete_to_glossary_fks.py  f1c373093ce9_remove_is_final_flage.py  f2d30e8729bf_add_created_at_and_updated_at_to_.py  f5b35fb0e2b6_explicit_for_nullable_in_models.py  fb4e92ee368f_separated_computation_heavy_tasks_from_.py  (+4 more)
backend/scripts/: add_test_novel.py  e2e_seed.py  extract_openapi.py  extract_openapi_json.py  generate_test_autolabels.py  generate_test_data_schema.py  lock_test_data.py  populate_test_data.py  seed_admin.py  seed_languages.py
backend/src/: config.py  database.py  exceptions.py  main.py  models.py  redis.py  redis_conn.py  schemas.py  worker.py
backend/src/auth/: config.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
backend/src/autolabels/: config.py  constants.py  dependencies.py  exceptions.py  models.py  permissions.py  router.py  schemas.py  service.py  utils.py  validators.py
backend/src/editing/: router.py  schemas.py  service.py
backend/src/filters/: exceptions.py  filter_base.py  filters.py  router.py  schemas.py  score_filter.py  service.py  types.py  utils.py
backend/src/glossaries/: constants.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
backend/src/labels/: constants.py  exceptions.py  models.py  permissions.py  router.py  schemas.py  service.py  utils.py
backend/src/languages/: constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/src/lib/: readme.md
backend/src/novels/: constants.py  exceptions.py  imports.py  models.py  permissions.py  router.py  schemas.py  service.py  utils.py
backend/src/requests/: cache.py  decorators.py  router.py
backend/src/translations/: constants.py  dependencies.py  exceptions.py  models.py  permissions.py  router.py  schemas.py  service.py  utils.py
backend/test_support/: __init__.py
backend/test_support/test_data/: __init__.py  authoring.py  domain.py  errors.py  loader.py  lockfile.py  materializer.py
backend/tests/: conftest.py  gate_logging.py  test_fixture_validation.py
backend/tests/auth/: test_auth_endpoints_basic.py  test_auth_router.py
(+694 files in other folders)
