[build-system]
requires = ["setuptools >= 72.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "noveltl_dev"
version = "0.0.0"
dependencies = [
    "sqlalchemy>=2.0.40",
    "pydantic>=2.10.0",
    "PyJWT>=2.10.0",
    "psycopg2-binary>=2.9.0",
    "fastapi>=0.119.0",
    "argon2-cffi>=23.0.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "pwdlib>=0.3.0",
    "fastapi>=0.120.0"
]
requires-python = ">= 3.12"
authors = [
    {name = "Leo Guan", email = "leo.ziqi@gmail.com"}
]
maintainers = [
    {name = "Leo Guan", email = "leo.ziqi@gmail.com"}
]
description = "Novel translation backend"
readme = "README.md"

[tool.setuptools.packages]
find = {where = ["src"]}