[tool.poetry]
name = "noveltl-dev"
version = "0.1.0"
description = "Novel translation backend"
authors = ["Leo Guan <leo.ziqi@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.119.0"
uvicorn = "^0.30.0"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.2.0"
pyjwt = "^2.10.0"
argon2-cffi = "^23.0.0"
python-multipart = "^0.0.9"
pwdlib = "^0.3.0"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
typeCheckingMode = "basic"
reportUnusedImport = true
reportUnusedVariable = true
exclude = [
    "**/alembic/**", 
]