[project]
name = "noveltl-dev"
version = "0.1.0"
description = "Novel translation backend"
authors = [{ name = "Leo Guan", email = "leo.ziqi@gmail.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "sqlalchemy>=2.0.40,<3",
    "psycopg2-binary>=2.9.0,<3",
    "pydantic>=2.10.0,<3",
    "pydantic-settings>=2.2.0,<3",
    "python-multipart>=0.0.9,<0.0.10",
    "alembic>=1.13.0,<2",
    "redis<=5.3.1",
    "arq>=0.26.3,<0.27",
]

[dependency-groups]
backend = [
    "fastapi>=0.119.0,<0.120",
    "uvicorn>=0.30.0,<0.31",
    "pyjwt==2.9.0",
    "argon2-cffi>=23.0.0,<24",
    "pwdlib>=0.3.0,<0.4",
    "redis[hiredis]>=5.3.1",
]
worker = [
    "transformers>=4.35.0,<5",
    "torch>=2.9.1",
    "hf>=1.1.0",
]
dev = [
    "pytest>=8.0.0,<9",
    "httpx>=0.27.0,<0.28",
    "pytest-asyncio>=0.24.0,<0.25",
    "ruff>=0.14.11",
    "coverage>=7.13.4",
    "pytest-dependency>=0.6.1",
    "pytest-order>=1.3.0",
    "pyrefly>=1.0.0",
    "types-psycopg2>=2.9.21.20260408",
    "pyyaml>=6.0.3",
]

[tool.uv]
package = true
default-groups = [
    "backend",
    "worker",
    "dev",
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "torch-cpu" }

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
markers = [
    "implementation: marks heavy model implementation tests",
    "slow: marks tests that take a long time"
]
addopts = "-ra -q -m 'not slow' --order-dependencies"

[tool.ruff]
target-version = "py312"

line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.pyrefly]
project-includes = ["src"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
]
infer-with-first-use = false
search-path = ["."]
